<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="80dp"
    android:paddingVertical="38dp">
    <ImageView
        android:layout_gravity="center"
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="300dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp"/>
    <TextView
        android:textSize="43sp"
        android:textColor="@color/black"
        android:id="@+id/order_placement_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_success_message"
        android:fontFamily="@font/uni_sans"
        android:textAlignment="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="330sp"
            android:textColor="#f6951f"
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uni_sans_heavy"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:textSize="43sp"
        android:textColor="@color/black"
        android:id="@+id/cashpay_message"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash_pay_message"
        android:fontFamily="@font/uni_sans"
        android:textAlignment="center"/>
    <TextView
        android:textSize="43sp"
        android:textColor="@color/success_green"
        android:id="@+id/cardpay_message"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_payment_message"
        android:fontFamily="@font/uni_sans"
        android:textAlignment="center"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/environment_section"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="30sp"
                android:textColor="@color/black"
                android:id="@+id/protect_environment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protect_environment_title"
                android:fontFamily="@font/uni_sans_heavy"
                android:textAlignment="center"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/seed_colored"/>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <TextView
            android:textSize="24sp"
            android:textColor="@color/dark_gray"
            android:id="@+id/protect_environment_subtitle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protect_environment_subtitle_1"
            android:fontFamily="@font/uni_sans"
            android:textAlignment="center"/>
        <TextView
            android:textSize="24sp"
            android:textColor="@color/dark_gray"
            android:id="@+id/protect_environment_subtitle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protect_environment_subtitle_2"
            android:fontFamily="@font/uni_sans"
            android:textAlignment="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="27sp"
                android:textColor="@color/white"
                android:id="@+id/print_button"
                android:background="@drawable/danger_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_receipt_button"
                android:fontFamily="@font/uni_sans"
                android:paddingHorizontal="30dp"
                android:paddingVertical="30dp"/>
            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/green_button"
                android:background="@drawable/success_button"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingVertical="30dp">
                <TextView
                    android:textSize="27sp"
                    android:textColor="@color/white"
                    android:id="@+id/save_environment_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_environment_no_receipt_button"
                    android:fontFamily="@font/uni_sans"/>
                <Space
                    android:layout_width="15dp"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/seed_white"/>
            </LinearLayout>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <TextView
            android:textSize="20sp"
            android:textColor="@color/dark_gray"
            android:id="@+id/protect_environment_footer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protect_environment_footer_1"
            android:fontFamily="@font/uni_sans"
            android:textAlignment="center"/>
        <TextView
            android:textSize="20sp"
            android:textColor="@color/dark_gray"
            android:id="@+id/protect_environment_footer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protect_environment_footer_2"
            android:fontFamily="@font/uni_sans"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>
