<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="300dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp"/>
        <TextView
            android:textSize="50sp"
            android:textColor="@color/black"
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_pickuptime"
            android:fontFamily="@font/uni_sans"
            android:textAlignment="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextClock
            android:textSize="50sp"
            android:textColor="#f6951f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uni_sans"
            android:format12Hour="E, dd MMM, yyyy HH:mm"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <NumberPicker
                android:theme="@style/numberPickerStyle"
                android:id="@+id/hour"
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:scaleX="2.4"
                android:scaleY="2.4"/>
            <TextView
                android:textSize="50sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"/>
            <NumberPicker
                android:theme="@style/numberPickerStyle"
                android:id="@+id/minute"
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:scaleX="2.4"
                android:scaleY="2.4"/>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp"/>
        <TextView
            android:textSize="60sp"
            android:textColor="@color/black"
            android:id="@+id/phone_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_phone_number"
            android:fontFamily="@font/uni_sans"
            android:textAlignment="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:textSize="60sp"
            android:textColor="@color/black"
            android:id="@+id/number_display"
            android:background="@drawable/voucher_display"
            android:padding="20dp"
            android:layout_width="663dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_0"
                android:layout_marginLeft="0dp"
                android:text="0"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_1"
                android:text="1"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_2"
                android:text="2"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_3"
                android:text="3"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_4"
                android:text="4"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_5"
                android:text="5"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_6"
                android:text="6"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_7"
                android:text="7"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_8"
                android:text="8"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/number_key_9"
                android:text="9"
                style="@style/voucherKeyStyle"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backspace_button"
                android:drawableStart="@drawable/backspace"
                android:paddingStart="15dp"
                style="@style/voucherKeyStyle"/>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/phone_number_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup_phone_number_warning"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/bottom_nav"
        android:padding="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="30sp"
            android:textColor="@color/white"
            android:id="@+id/back_button"
            android:background="@drawable/danger_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/table_back"
            android:fontFamily="@font/uni_sans"
            android:paddingVertical="30dp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="30sp"
            android:textColor="@color/white"
            android:id="@+id/confirm_button"
            android:background="@drawable/success_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/table_confirm"
            android:fontFamily="@font/uni_sans"
            android:paddingVertical="30dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
